# mod8-pon2

./: CMakeLists.txt  README.md  package.xml
config/: mapping_params.yaml  navigation_params.yaml
install/: local_setup.sh  setup.sh
install/package/lib/package/: move
install/package/share/package/: package.sh
install/turtlebot3_nav_package/share/turtlebot3_nav_package/: package.bash  package.zsh
launch/: mapping.launch.py
log/: latest_build
scripts/: navigation_script.py
src/package/: setup.py
src/package/install/: local_setup.sh  setup.sh
src/package/install/package/share/package/: package.sh  package.xml
src/package/install/package/share/package/launch/: mapping_launch.py
src/package/launch/: navigation.launch.py  navigation_launch.py
src/package/log/: latest_build
src/turtlebot3_nav_package/: package.xml  setup.cfg  setup.py
